--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     <title>Test Git</title>
 </head>
 <body>
-    <div>
+    <div class="tst">
     <h1>Hello world !!!</h1>
     <h2>How are you</h2>
 </div>
